# glyco

./: Contributing.md  Fast.ipynb  Get started.ipynb  LICENSE  Quick start.ipynb  README.md  Readme.md  glyco.py  meal.py  pyproject.toml  requirements.txt  test.py  utils.py
archived_tutorials/: E02_Analyse_Glucose_Data.ipynb
docs/: days.md  events.md  examples.md  glucose.md  intended-use.md  issues.md  meals.md  units.md
docs/concepts/: days.md  default_values.md  events_and_meals.md  glucose.md  meals.md  plots.md  privacy.md  units.md
docs/extra/: healthcare.md
examples/: Get started.ipynb
examples/data/: out_glucose_sample.csv  out_meals.csv  out_meals_real.csv  tiny_sample_delimiter.csv
examples/data/shah/: NonDiabBaselineComp.csv  NonDiabDeviceBGM.csv  NonDiabDeviceIssue.csv  NonDiabDiabTannerStaging.csv  NonDiabFollowUpComp.csv  NonDiabMedication.csv  NonDiabParticipantLogs.csv  NonDiabPreExistingCondition.csv  NonDiabPtFinalStatus.csv  NonDiabPtRoster.csv  NonDiabSampleResults.csv  NonDiabScreening.csv  NonDiabVisitInfo.csv  ReadMe.rtf  hall_clinical.csv  hall_glycemic_sign.tsv  hall_insulin.tsv  hall_meals_class.tsv  hall_meals_std.tsv  hall_param_tested.tsv
src/glyco/: __init__.py  constants.py  glucose.py  meal.py  meals.py  privacy.py  utils.py
src/glyco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/data/: sample_glucose.csv  tiny_sample.csv  tiny_sample_type6.csv
tests/: test.py  test_glucose.py
